--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
+
+buildscript {
+    repositories {
+        jcenter()
+
+    }
+    dependencies {
+        // replace with the current version of the Android plugin
+        classpath 'com.android.tools.build:gradle:2.1.0'
+        // Since Android's Gradle plugin 0.11, you have to use android-apt >= 1.3
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.droidtitan:lint-cleaner-plugin:0.3.0'
+    }
+}
 
 android {
     compileSdkVersion 23
@@ -35,6 +50,13 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.0.1'
 
     compile 'com.facebook.fresco:fresco:0.9.0+'
+    // dagger2
+    provided 'javax.annotation:javax.annotation-api:1.2'
+    compile 'com.google.dagger:dagger:2.0.2'
+    apt 'com.google.dagger:dagger-compiler:2.0.2'
+    //otto
+    compile 'com.squareup:otto:1.3.8'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
     compile 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.5'
     compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
@@ -47,4 +69,5 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     compile 'com.facebook.stetho:stetho:1.1.0'
     compile 'com.facebook.stetho:stetho-okhttp:1.1.0'
+
 }
