（3）SettingActivity界面完全使用MVP和Dagger2实现；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,12 @@
         <activity
             android:name="com.diffey.view.rxzhihu.ui.activity.StoryActivity"
             android:screenOrientation="portrait" />
-        <activity android:name="com.diffey.view.rxzhihu.ui.activity.SettingActivity" />
         <activity
-            android:name="com.diffey.view.rxzhihu.ui.activity.TRClientActivity"/>
+            android:name="com.diffey.view.rxzhihu.ui.setting.SettingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.diffey.view.rxzhihu.ui.activity.TRClientActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
