（4）文章详情修改，还未改好，大部分已完成；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.diffey.view.rxzhihu.ui.activity.StoryActivity"
+            android:name="com.diffey.view.rxzhihu.ui.article.ArticleDetailActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.diffey.view.rxzhihu.ui.setting.SettingActivity"
